--- a/GraphQLExperiments.csproj
+++ b/GraphQLExperiments.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.0-preview.24" />
+  </ItemGroup>
+
 </Project>
